--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,8 +22,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          registry: ghcr.io
+          username: ${{ secrets.GHCR_LOGIN }}
+          password: ${{ secrets.GHCR_PASSWORD }}
 
       - name: Set up Docker Buildx
         id: buildx
@@ -39,4 +40,4 @@ jobs:
           build-args:
             APP_VERSION=${{ steps.previoustag.outputs.tag }}
           tags:
-            ${{ secrets.DOCKER_HUB_USERNAME }}/monitor:latest, ${{ secrets.DOCKER_HUB_USERNAME }}/monitor:${{ steps.previoustag.outputs.tag }}
+            ${{ secrets.GHCR_LOGIN }}/monitor:latest, ${{ secrets.GHCR_LOGIN }}/monitor:${{ steps.previoustag.outputs.tag }}
