Fixes problem with running

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "RoadRunner monitor",
   "scripts": {
-    "dev": "cd frontend && npm run dev"
+    "dev": "cd frontend && npm run dev",
+    "start": "cd frontend && npm run start"
   }
 }
