Fixes problem with running npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "RoadRunner monitor",
   "scripts": {
-    "dev": "cd frontend && npm run dev",
-    "start": "cd frontend && npm run start"
+    "dev": "cd frontend && npm run dev"
   }
 }
