--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -104,7 +104,7 @@ ENV HOST=0.0.0.0
 ENV BASE_URL=http://127.0.0.1:8080
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
-ARG REPOSITORY=https://github.com/roadrunner-server/monitor
+ARG REPOSITORY=https://github.com/roadrunner-server/birddog
 
 RUN git clone $REPOSITORY /app
 
@@ -124,7 +124,7 @@ EXPOSE 3000
 EXPOSE 8080
 
 LABEL org.opencontainers.image.source=$REPOSITORY
-LABEL org.opencontainers.image.description="RoadRunner Monitor"
+LABEL org.opencontainers.image.description="RoadRunner Birddog"
 LABEL org.opencontainers.image.licenses=MIT
 
 CMD ./rr serve -c .rr-prod.yaml
