--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -101,7 +101,7 @@ ARG CACHEBUST=1
 ARG APP_VERSION=v1.0
 
 ENV HOST=0.0.0.0
-ENV BASE_URL=http://127.0.0.1:8080
+ENV API_URL=http://127.0.0.1:8080
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
 ARG REPOSITORY=https://github.com/roadrunner-server/birddog
