--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.25.3",
     "nano-date": "^4.1.0",
     "nuxt": "^2.15.8",
+    "nuxt-highlightjs": "^1.0.3",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
