--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "RoadRunner monitor",
   "scripts": {
     "dev": "cd frontend && npm run dev"
+  },
+  "dependencies": {
+    "@nuxtjs/toast": "^3.3.1"
   }
 }
