--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "RoadRunner Birddog",
-  "scripts": {
-    "dev": "cd frontend && npm run dev"
-  }
+    "name": "RoadRunner Birddog",
+    "scripts": {
+        "dev": "cd frontend && npm run dev",
+        "generate": "cd frontend && npm run generate"
+    }
 }
