--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,116 +1,36 @@
-ARG APP_IMAGE=spiralscout/php81-grpc:1.0.0
-ARG ROAD_RUNNER_IMAGE=2.11.4
-
-FROM $APP_IMAGE
-
-ENV NODE_VERSION 19.0.0
-
-RUN addgroup -g 1000 node \
-    && adduser -u 1000 -G node -s /bin/sh -D node \
-    && apk add --no-cache \
-        libstdc++ \
-    && apk add --no-cache --virtual .build-deps \
-        curl \
-    && ARCH= && alpineArch="$(apk --print-arch)" \
-      && case "${alpineArch##*-}" in \
-        x86_64) \
-          ARCH='x64' \
-          CHECKSUM="80744232bb6ebe38967a827c05cab3d0a4b8cf75d2c7963d806f074e193d05ee" \
-          ;; \
-        *) ;; \
-      esac \
-  && if [ -n "${CHECKSUM}" ]; then \
-    set -eu; \
-    curl -fsSLO --compressed "https://unofficial-builds.nodejs.org/download/release/v$NODE_VERSION/node-v$NODE_VERSION-linux-$ARCH-musl.tar.xz"; \
-    echo "$CHECKSUM  node-v$NODE_VERSION-linux-$ARCH-musl.tar.xz" | sha256sum -c - \
-      && tar -xJf "node-v$NODE_VERSION-linux-$ARCH-musl.tar.xz" -C /usr/local --strip-components=1 --no-same-owner \
-      && ln -s /usr/local/bin/node /usr/local/bin/nodejs; \
-  else \
-    echo "Building from source" \
-    # backup build
-    && apk add --no-cache --virtual .build-deps-full \
-        binutils-gold \
-        g++ \
-        gcc \
-        gnupg \
-        libgcc \
-        linux-headers \
-        make \
-        python3 \
-    # gpg keys listed at https://github.com/nodejs/node#release-keys
-    && for key in \
-      4ED778F539E3634C779C87C6D7062848A1AB005C \
-      141F07595B7B3FFE74309A937405533BE57C7D57 \
-      74F12602B6F1C4E913FAA37AD3A89613643B6201 \
-      61FC681DFB92A079F1685E77973F295594EC4689 \
-      8FCCA13FEF1D0C2E91008E09770F7A9A5AE15600 \
-      C4F0DFFF4E8C1A8236409D08E73BC641CC11F4C8 \
-      890C08DB8579162FEE0DF9DB8BEAB4DFCF555EF4 \
-      C82FA3AE1CBEDC6BE46B9360C43CEC45C17AB93C \
-      108F52B48DB57BB0CC439B2997B01419BD92F80A \
-    ; do \
-      gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys "$key" || \
-      gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" ; \
-    done \
-    && curl -fsSLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/node-v$NODE_VERSION.tar.xz" \
-    && curl -fsSLO --compressed "https://nodejs.org/dist/v$NODE_VERSION/SHASUMS256.txt.asc" \
-    && gpg --batch --decrypt --output SHASUMS256.txt SHASUMS256.txt.asc \
-    && grep " node-v$NODE_VERSION.tar.xz\$" SHASUMS256.txt | sha256sum -c - \
-    && tar -xf "node-v$NODE_VERSION.tar.xz" \
-    && cd "node-v$NODE_VERSION" \
-    && ./configure \
-    && make -j$(getconf _NPROCESSORS_ONLN) V= \
-    && make install \
-    && apk del .build-deps-full \
-    && cd .. \
-    && rm -Rf "node-v$NODE_VERSION" \
-    && rm "node-v$NODE_VERSION.tar.xz" SHASUMS256.txt.asc SHASUMS256.txt; \
-  fi \
-  && rm -f "node-v$NODE_VERSION-linux-$ARCH-musl.tar.xz" \
-  && apk del .build-deps \
-  # smoke tests
-  && node --version \
-  && npm --version
-
-ENV YARN_VERSION 1.22.19
-
-RUN apk add --no-cache --virtual .build-deps-yarn curl gnupg tar \
-  && for key in \
-    6A010C5166006599AA17F08146C2130DFD2497F5 \
-  ; do \
-    gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys "$key" || \
-    gpg --batch --keyserver keyserver.ubuntu.com --recv-keys "$key" ; \
-  done \
-  && curl -fsSLO --compressed "https://yarnpkg.com/downloads/$YARN_VERSION/yarn-v$YARN_VERSION.tar.gz" \
-  && curl -fsSLO --compressed "https://yarnpkg.com/downloads/$YARN_VERSION/yarn-v$YARN_VERSION.tar.gz.asc" \
-  && gpg --batch --verify yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz \
-  && mkdir -p /opt \
-  && tar -xzf yarn-v$YARN_VERSION.tar.gz -C /opt/ \
-  && ln -s /opt/yarn-v$YARN_VERSION/bin/yarn /usr/local/bin/yarn \
-  && ln -s /opt/yarn-v$YARN_VERSION/bin/yarnpkg /usr/local/bin/yarnpkg \
-  && rm yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz \
-  && apk del .build-deps-yarn \
-  # smoke test
-  && yarn --version
-
-RUN apk add --no-cache nginx
-RUN apk cache clean
-
-RUN curl -s https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
-
-ARG CACHEBUST=1
-ARG APP_VERSION=v1.0
-
-ENV HOST=0.0.0.0
-ENV API_URL=http://127.0.0.1:8080
-ENV COMPOSER_ALLOW_SUPERUSER=1
+# Clone the repository
+FROM alpine/git as git
 
 ARG REPOSITORY=https://github.com/roadrunner-server/birddog
-
 RUN git clone $REPOSITORY /app
 
+WORKDIR /app/bin
+# Download all required binaries
+RUN chmod +x get-binaries.sh
+RUN ./get-binaries.sh
+
+# Build JS files
+FROM node:19-alpine as frontend
+COPY --from=git /app /app
+WORKDIR /app/frontend
+
+ENV NODE_OPTIONS=--openssl-legacy-provider
+ENV API_URL=null
+ENV WS_URL=null
+
+RUN npm install
+RUN npm run generate
+RUN rm -rf node_modules
+
+# Configure PHP project
+FROM spiralscout/php81-grpc:1.0.0
+COPY --from=frontend /app /app
+
+ARG APP_VERSION=v1.0
+ENV COMPOSER_ALLOW_SUPERUSER=1
+
+RUN curl -s https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin/ --filename=composer
 WORKDIR /app
-RUN mv docker/nginx.conf /etc/nginx/conf.d
 
 RUN composer config --no-plugins allow-plugins.spiral/composer-publish-plugin false
 RUN composer install --no-dev
@@ -118,18 +38,12 @@ RUN composer install --no-dev
 RUN echo "Download RoadRunner"
 RUN ./vendor/bin/rr get-binary -s beta
 
-WORKDIR /app/bin
-# Download all required binaries
-RUN chmod +x get-binaries.sh
-RUN ./get-binaries.sh
-
-WORKDIR /app/frontend
-ENV NODE_OPTIONS=--openssl-legacy-provider
-RUN npm install
-RUN npm run generate
-RUN rm -rf node_modules
-
 WORKDIR /app
+
+RUN apk add --no-cache nginx
+RUN cp docker/nginx/nginx.conf /etc/nginx/nginx.conf
+RUN [ -d /etc/nginx/conf.d ] ||  mkdir /etc/nginx/conf.d
+RUN cp docker/nginx/default.conf.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80/tcp
 
