--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,16 +6,14 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 80;
 
-    index index.html;
-
     server_name _;
 
     location / {
         proxy_pass http://127.0.0.1:8082;
     }
 
-    location /ws {
-        proxy_pass http://127.0.0.1:8000/connection;
+    location /connection {
+        proxy_pass http://127.0.0.1:8080/connection;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
