--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "centrifuge": "^3.0.1",
     "chart.js": "^3.9.1",
     "core-js": "^3.25.3",
+    "json-to-pretty-yaml": "^1.2.2",
     "nano-date": "^4.1.0",
     "nuxt": "^2.15.8",
     "nuxt-highlightjs": "^1.0.3",
