--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.22.0",
+    "console-log-colors": "^0.3.3",
     "centrifuge": "^3.0.1",
     "chart.js": "^3.9.1",
     "core-js": "^3.25.3",
