--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: false
 
 contact_links:
-  - name: ❓ Start a discussion or ask a question.
-    url: https://github.com/roadrunner-server/roadrunner/discussions
+  - name: ❓ Start a discussion or ask a question on our Discord server.
+    url: https://discord.gg/8bZsjYhVVk
     about: Please ask and answer questions here.
